--- a/.env
+++ b/.env
@@ -1,4 +1,5 @@
-DB_HOST=127.0.0.1
+DB_HOST=mysql.railway.internal  # ✅ Use Railway internal host
 DB_USER=root
-DB_PASSWORD=12345678
-DB_NAME=portfolio_db
+DB_PASSWORD=QCrpyYetgzLFXhomOPEgXvmbFxBxaMhx  # ✅ Your MySQL password
+DB_NAME=railway  # ✅ Replace with your actual database name
+DB_PORT=3306  # ✅ Default MySQL port
