--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
-DB_HOST=mysql.railway.internal  # ✅ Use Railway internal host
-DB_USER=root
-DB_PASSWORD=QCrpyYetgzLFXhomOPEgXvmbFxBxaMhx  # ✅ Your MySQL password
-DB_NAME=railway  # ✅ Replace with your actual database name
-DB_PORT=3306  # ✅ Default MySQL port
+DB_HOST=mysql.railway.internal
+DB_NAME=YOUR_DATABASE_NAME
+DB_USER=YOUR_DATABASE_USER
+DB_PASSWORD=YOUR_DATABASE_PASSWORD
+DB_PORT=3306
