--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 DB_HOST=mysql.railway.internal
-DB_NAME=YOUR_DATABASE_NAME
-DB_USER=YOUR_DATABASE_USER
-DB_PASSWORD=YOUR_DATABASE_PASSWORD
+DB_USER=root
+DB_PASSWORD=QCrpyYetgzLFXhomOPEgXvmbFxBxaMhx
+DB_NAME=railway
 DB_PORT=3306
