--- a/.env
+++ b/.env
@@ -3,3 +3,4 @@ DB_USER=root
 DB_PASSWORD=biimsdKTcEocFYCMvrcENsuXFUwShAhP
 DB_NAME=railway
 DB_PORT=3306
+REACT_APP_API_URL=https://my-portfolio-production-17cf.up.railway.app/projects
